backend/backend_perf_log.txt

> backend@1.0.0 dev
> nodemon src/server.js

[33m[nodemon] 3.1.14[39m
[33m[nodemon] to restart at any time, enter `rs`[39m
[33m[nodemon] watching path(s): *.*[39m
[33m[nodemon] watching extensions: js,mjs,cjs,json[39m
[32m[nodemon] starting `node src/server.js`[39m
file:///c:/e-commerce-parapharmacie/backend/src/server.js:4
import { createClient } from 'ioredis';
         ^^^^^^^^^^^^
SyntaxError: Named export 'createClient' not found. The requested module 'ioredis' is a CommonJS module, which may not support all module.exports as named exports.
CommonJS modules can always be imported via the default export, for example using:

import pkg from 'ioredis';
const { createClient } = pkg;

    at #asyncInstantiate (node:internal/modules/esm/module_job:319:21)
    at process.processTicksAndRejections (node:internal/process/task_queues:104:5)
    at async ModuleJob.run (node:internal/modules/esm/module_job:422:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:661:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v24.14.0
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
[32m[nodemon] restarting child process[39m
[32m[nodemon] starting `node src/server.js`[39m
file:///c:/e-commerce-parapharmacie/backend/src/server.js:4
import { createClient } from 'ioredis';
         ^^^^^^^^^^^^
SyntaxError: Named export 'createClient' not found. The requested module 'ioredis' is a CommonJS module, which may not support all module.exports as named exports.
CommonJS modules can always be imported via the default export, for example using:

import pkg from 'ioredis';
const { createClient } = pkg;

    at #asyncInstantiate (node:internal/modules/esm/module_job:319:21)
    at process.processTicksAndRejections (node:internal/process/task_queues:104:5)
    at async ModuleJob.run (node:internal/modules/esm/module_job:422:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:661:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v24.14.0
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
^C^C